[package]
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>",
           "David Stainton <dawuud@riseup.net>"]
edition = "2018"
name = "appendix"
version = "0.2.0"
description = "Append-only, on-disk key-value index"
documentation = "https://docs.rs/appendix/"
keywords = ["index", "datastructure"]
license = "GPL-3.0"

[dependencies]
arrayvec = "0.4.10"
lazy_static = "1.2.0"
memmap = "0.7.0"
parking_lot = "0.7.1"
seahash = "3.0.5"

[dev-dependencies]
rand = "0.6.4"
tempfile = "3.0.5"
